Styled social media icons and the first row of content after the header.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<head>
 	 	<!-- Name of webpage on browser tab -->
 		<title>Casey Root</title>
@@ -10,6 +11,7 @@
 		<!-- Link to css file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
+
 	<body>
 		<header>
 			<h2>Casey Root</h2>
@@ -25,23 +27,19 @@
 						<img src="Images/Facebook Logo.png" alt="Facebook Logo"></a></li>
 			</ul>
 		</header>
-		<!-- Creates double line break between header and section -->
 		<br><br><br><br>
 		<section class="row">
-			<ul class="pictures">
-  				<li><img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot"></li>
-				<li><img src="Images/Kendall & Casey.jpg" alt="Kendall & Casey"></li>
-				<li><img src="Images/Kip & Casey.jpg" alt="Kip & Casey"></li>
-				<li><img src="Images/Kendall & Casey2.jpg" alt="Kendall & Casey"></li>
-			</ul>
-			<introduction>
+			<div class="introduction">
 				<h2>Welcome to My Website!</h2>
 				<p>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</p>
 				<p>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</p>
-			</introduction>
+			</div>
+			<div class="picture">
+	    		<img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
+	    	</div>
 		</section>
-		<!-- Adds a space between section and footer -->
 		<br> 
 		<footer></footer>
 	</body>
+	
 </html>
