--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 	<head>
 	 	<!-- Name of webpage on browser tab -->
 		<title>Casey Root</title>
@@ -11,35 +10,43 @@
 		<!-- Link to css file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
-
 	<body>
 		<header>
 			<h2>Casey Root</h2>
 			<ul>
-				<li class="linkedin">
+				<li id="linkedin">
 					<a href="https://www.linkedin.com/in/casey-root/" target="_blank">
 						<img src="Images/Linkedin Logo.png" alt="Linkedin Logo"></a></li>
-				<li class="github">
+				<li id="github">
 					<a href="https://github.com/caseyroot97?tab=repositories" target="_blank">
 						<img src="Images/GitHub Logo.png" alt="GitHub Logo"></a></li>
-				<li class="facebook">
+				<li id="facebook">
 					<a href="https://www.facebook.com/casey.root.5" target="_blank">
 						<img src="Images/Facebook Logo.png" alt="Facebook Logo"></a></li>
 			</ul>
 		</header>
 		<br><br><br><br>
-		<section class="row">
+		<section id="row1">
 			<div class="introduction">
-				<h2>Welcome to My Website!</h2>
-				<p>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</p>
-				<p>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</p>
+				<h1>Welcome to My Website!</h1>
+				<h2>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</h2>
+				<h2>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h2>
 			</div>
-			<div class="picture">
+			<div id="headshot">
 	    		<img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
 	    	</div>
 		</section>
+		<section id="row2">
+				<div id=leftarrow></div>
+				<div class="slidepic">
+					<img src="Images/Austin.jpg" alt="Austin, TX">
+				</div>
+				<div class="slidetext">
+					<h2>I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h2>
+				</div>
+				<div id=rightarrow></div>
+		</section>
 		<br> 
 		<footer></footer>
-	</body>
-	
+	</body>	
 </html>
