--- a/index.html
+++ b/index.html
@@ -26,26 +26,28 @@
 			</ul>
 		</header>
 		<br><br><br><br>
-		<section id="row1">
+		<div id=container>
 			<div class="introduction">
 				<h1>Welcome to My Website!</h1>
-				<h2>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</h2>
-				<h2>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h2>
+				<h3>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</h3>
+				<h3>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h3>
 			</div>
 			<div id="headshot">
 	    		<img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
 	    	</div>
-		</section>
-		<section id="row2">
-				<div id=leftarrow></div>
-				<div class="slidepic">
-					<img src="Images/Austin.jpg" alt="Austin, TX">
-				</div>
-				<div class="slidetext">
-					<h2>I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h2>
-				</div>
-				<div id=rightarrow></div>
-		</section>
+			<div id=leftarrow>
+				<div class="icon" onclick="plusDivs(-1)">&#10094;</div>
+			</div>
+			<div class="slidepic">
+				<img src="Images/Austin.jpg" alt="Austin, TX">
+			</div>
+			<div class="slidetext">
+				<h3>I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
+			</div>
+			<div id=rightarrow>
+				<div class="icon" onclick="plusDivs(1)">&#10095;</div>
+			</div>
+		</div>
 		<br> 
 		<footer></footer>
 	</body>	
