Improved the CSS and page dynamics

--- a/index.html
+++ b/index.html
@@ -25,30 +25,32 @@
 						<img src="Images/Facebook Logo.png" alt="Facebook Logo"></a></li>
 			</ul>
 		</header>
-		<br><br><br><br>
+		<div id="header"></div>
 		<div id=container>
-			<div class="introduction">
-				<h1>Welcome to My Website!</h1>
-				<h3>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a sophomore at Texas Tech University studying Computer Science.</h3>
-				<h3>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h3>
-			</div>
-			<div id="headshot">
-	    		<img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
-	    	</div>
-			<div id=leftarrow>
-				<div class="icon" onclick="plusDivs(-1)">&#10094;</div>
-			</div>
-			<div class="slidepic">
-				<img src="Images/Austin.jpg" alt="Austin, TX">
-			</div>
-			<div class="slidetext">
-				<h3>I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
-			</div>
-			<div id=rightarrow>
-				<div class="icon" onclick="plusDivs(1)">&#10095;</div>
+			<div id="intro">
+				<div id="introductionText">
+					<h1>Welcome to My Website!</h1>
+					<h3>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a senior at Texas Tech University studying Computer Science.</h3>
+					<h3>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h3>
+				</div>
+				<div id="introductionPic">
+		    		<img src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
+		    	</div>
+		    </div>
+
+	    	<div id=carouselBanner>
+				<button id=leftarrow>&#10094;</button>
+				<div class="carouselPic" id="austinPic">
+					<img src="Images/Austin.jpg" alt="Austin, TX">
+				</div>
+				<div class="carouselText" id="austinText">
+					<h3>I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
+				</div>
+				<button id=rightarrow>&#10095;</button>
 			</div>
 		</div>
-		<br> 
+
+		<div id="footer"></div>
 		<footer></footer>
 	</body>	
 </html>
