Removed extra quotation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		    </div>
 
 	    	<div id=carouselBanner>
-				<button id=leftarrow onclick="previousSlide()"">&#10094;</button>
+				<button id=leftarrow onclick="previousSlide()">&#10094;</button>
 
 				<div class="carousel">
 					<img class="carouselPic" src="Images/Austin.jpg" alt="Austin, TX">
