Fine tuned mobile view

--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
 
 				<div class="carousel">
 					<img class="carouselPic" src="Images/Austin.jpg" alt="Austin, TX">
-					<h3 class="carouselText">I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
+					<h3 class="carouselText" id="austinText">I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Anderson HS.jpg" alt="Anderson HS">
-					<h3 class="carouselText">I graduated from L.C. Anderson High School in May of 2016. I was very involved with the lacrosse team and the art department as well as being a member of the math honor society Mu Alpha Theta.</h3>
+					<h3 class="carouselText" id="highschoolText">I graduated from L.C. Anderson High School in May of 2016. I was very involved with the lacrosse team and the art department as well as being a member of the math honor society Mu Alpha Theta.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Texas Tech.jpg" alt="Texas Tech">
-					<h3 class="carouselText">I’m currently enrolled in Texas Tech University where I am involved in multiple organizations from machine learning to greek life. I try to take advantage of every resource this amazing university has to offer.</h3>
+					<h3 class="carouselText" id="ttuText">I’m currently enrolled in Texas Tech University where I am involved in multiple organizations from machine learning to greek life. I try to take advantage of every resource this amazing university has to offer.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="Code">
-					<h3 class="carouselText">I’m studying Computer Science with a minor in mathematics. When I started college I was very interested in finding something I am passionate about. I started out studying Electrical Engineering but quickly found out that I have much more interest in programming and the software aspect of computers.</h3>
+					<h3 class="carouselText" id="compsciText">I’m studying Computer Science with a minor in mathematics. When I started college I was very interested in finding something I am passionate about. I started out studying Electrical Engineering but quickly found out that I have much more interest in programming and the software aspect of computers.</h3>
 				</div>
 
 				<button id=rightarrow onclick="nextSlide()">&#10095;</button>
