Updated carousel text and resume

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Texas Tech.jpg" alt="Texas Tech">
-					<h3 class="carouselText" id="ttuText">I’m currently enrolled in Texas Tech University where I am involved in multiple organizations from machine learning to greek life. I try to take advantage of every resource this amazing university has to offer.</h3>
+					<h3 class="carouselText" id="ttuText">I’m currently enrolled in Texas Tech University where I am involved in multiple organizations from greek life to hackathons. I try to take advantage of every resource this amazing university has to offer.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="Code">
-					<h3 class="carouselText" id="compsciText">I’m studying Computer Science with a minor in mathematics. When I started college I was very interested in finding something I am passionate about. I started out studying Electrical Engineering but quickly found out that I have much more interest in programming and the software aspect of computers.</h3>
+					<h3 class="carouselText" id="compsciText">I’m studying Computer Science with a minor in mathematics. When I started college I was very interested in finding something I am passionate about. I started out studying Electrical Engineering but quickly found out that I have much more interest in software development.</h3>
 				</div>
 
 				<button id=rightarrow onclick="nextSlide()">&#10095;</button>
