--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<head>
 	 	<!-- Name of webpage on browser tab -->
 		<title>Casey Root's Website</title>
-		<meta name="description" content="This is my personal website that I made to learn basic web development skills.">
+		<!-- Need to finish this!!!!!!        v v v v v v    -->
+		<meta name="description" content="This is the description">
 		<!-- Link to css file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
@@ -19,7 +20,7 @@
 					</a>
 				</li>
 				<li id="github">
-					<a href="https://github.com/caseyroot97?tab=repositories" target="_blank">
+					<a href="https://github.com/caseyroot97" target="_blank">
 						<img src="Images/GitHub Logo.png" alt="GitHub Logo">
 					</a>
 				</li>
