--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<head>
 	 	<!-- Name of webpage on browser tab -->
 		<title>Casey Root's Website</title>
-		<!-- Need to finish this!!!!!!        v v v v v v    -->
-		<meta name="description" content="This is the description">
+		<meta name="description" content="This is my personal website that I made to learn basic web development skills.">
 		<!-- Link to css file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
