--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<head>
 	 	<!-- Name of webpage on browser tab -->
 		<title>Casey Root's Website</title>
-		<!-- Need to finish this!!!!!!        v v v v v v    -->
-		<meta name="description" content="This is the description">
+		<meta name="description" content="This is my personal website that I made to learn basic web development skills.">
 		<!-- Link to css file -->
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
@@ -20,13 +19,8 @@
 					</a>
 				</li>
 				<li id="github">
-					<a href="https://github.com/caseyroot97?tab=repositories" target="_blank">
+					<a href="https://github.com/caseyroot97" target="_blank">
 						<img src="Images/GitHub Logo.png" alt="GitHub Logo">
-					</a>
-				</li>
-				<li id="facebook">
-					<a href="https://www.facebook.com/casey.root.5" target="_blank">
-						<img src="Images/Facebook Logo.png" alt="Facebook Logo">
 					</a>
 				</li>
 			</ul>
@@ -37,7 +31,7 @@
 			<div id="intro">
 				<div id="introductionText">
 					<h1>Welcome to my website!</h1>
-					<h3>My name&#39s Casey and I&#39m from Austin, Texas. I&#39m currently a senior at Texas Tech University studying Computer Science.</h3>
+					<h3>My name&#39s Casey, I'm currently a Programmer Analyst at Texas Tech where I write software for the University.</h3>
 					<h3>Please take some time to check out <a class="hyper" href="Resume.pdf" target="_blank">my resume</a>.</h3>
 				</div>
 	    		<img id="introductionPic" src="Images/Casey Professional Headshot.jpg" alt="Casey Professional Headshot">
@@ -47,31 +41,25 @@
 				<button id=leftarrow onclick="previousSlide()">&#10094;</button>
 
 				<div class="carousel">
-					<img class="carouselPic" src="Images/Austin.jpg" alt="Austin, TX">
-					<h3 class="carouselText" id="austinText">I was born and raised in Austin, Texas. At a young age I was introduced to Cub Scouts and Lacrosse where I learned many team building and leadership skills. I wouldn’t be the person I am today if it weren’t for this.</h3>
-				</div>
-
-				<div class="carousel hidden">
-					<img class="carouselPic" src="Images/Anderson HS.jpg" alt="Anderson HS">
-					<h3 class="carouselText" id="highschoolText">I graduated from L.C. Anderson High School in May of 2016. I was very involved with the lacrosse team and the art department as well as being a member of the math honor society Mu Alpha Theta.</h3>
-				</div>
-
-				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Texas Tech.jpg" alt="Texas Tech">
-					<h3 class="carouselText" id="ttuText">I’m currently enrolled in Texas Tech University where I am involved in multiple organizations from greek life to hackathons. I try to take advantage of every resource this amazing university has to offer.</h3>
+					<h3 class="carouselText" id="ttuText">In 2016 I moved to Lubbock and began my college degree at Texas Tech. I started out in Electrical Engineering, but early on discovered my interest in software development. I changed my major my software year and never looked back. I graduated in 2021 with my Bachelor of Science.</h3>
 				</div>
 
 				<div class="carousel hidden">
-					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="Code">
-					<h3 class="carouselText" id="compsciText">I’m studying Computer Science with a minor in mathematics. When I started college I was very interested in finding something I am passionate about. I started out studying Electrical Engineering but quickly found out that I have much more interest in software development.</h3>
+					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="ADS">
+					<h3 class="carouselText" id="adsText">During my Senior year at Texas Tech, I was fortunate to have the opportunity to develop software for the Application Development and Support department as a student assistant. When I graduated that May I accepted an offer from Texas Tech to continue programming as a Programmer Analyst.</h3>
+				</div>
+
+				<div class="carousel hidden">
+					<img class="carouselPic" src="Images/Computer Science.jpg" alt="Computer Science">
+					<h3 class="carouselText" id="computerScienceText">During my time as a student at Texas Tech I learned the principles of object-oriented programming, as well as the advantages of certain algorithms and data structures over others in different scenarios. I have gone on to utilize this knowledge during my professional career while developing the different applications I’ve worked on. These applications have varied from websites and APIs to data processing console applications, all utilizing the .Net stack.</h3>
 				</div>
 
 				<button id=rightarrow onclick="nextSlide()">&#10095;</button>
 				<div id="dots">
-				  <span class="dot active" onclick="toSlide(0)"></span> 
-				  <span class="dot" onclick="toSlide(1)"></span> 
-				  <span class="dot" onclick="toSlide(2)"></span> 
-				  <span class="dot" onclick="toSlide(3)"></span>
+				  <span class="dot active" onclick="toSlide(0)"></span>
+				  <span class="dot" onclick="toSlide(1)"></span>
+				  <span class="dot" onclick="toSlide(2)"></span>
 				</div>
 			</div>
 		</div>
@@ -81,5 +69,5 @@
 
 		<script src="home_page.js"></script>
 
-	</body>	
+	</body>
 </html>
