Updated Resume and Grammar Issues

--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
 
 				<div class="carousel">
 					<img class="carouselPic" src="Images/Texas Tech.jpg" alt="Texas Tech">
-					<h3 class="carouselText" id="ttuText">In 2016 I moved to Lubbock and began my college degree at Texas Tech. I started out in Electrical Engineering, but early on discovered my interest in software development. I changed my major my software year and never looked back. I graduated in 2021 with my Bachelor of Science.</h3>
+					<h3 class="carouselText" id="ttuText">In 2016 I moved to Lubbock and began my college degree at Texas Tech. I started out in Electrical Engineering, but early on discovered my interest in software development. I changed my major my Sophomore year and never looked back. I graduated in 2021 with my Bachelor of Science.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="ADS">
-					<h3 class="carouselText" id="adsText">During my Senior year at Texas Tech, I was fortunate to have the opportunity to develop software for the Application Development and Support department as a student assistant. When I graduated that May I accepted an offer from Texas Tech to continue programming as a Programmer Analyst.</h3>
+					<h3 class="carouselText" id="adsText">During my Senior year at Texas Tech, I was fortunate to have the opportunity to develop software for Texas Tech's Application Development and Support department as a student assistant. When I graduated that May I accepted an offer from Texas Tech to continue programming as a Programmer Analyst III.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Computer Science.jpg" alt="Computer Science">
-					<h3 class="carouselText" id="computerScienceText">During my time as a student at Texas Tech I learned the principles of object-oriented programming, as well as the advantages of certain algorithms and data structures over others in different scenarios. I have gone on to utilize this knowledge during my professional career while developing the different applications I’ve worked on. These applications have varied from websites and APIs to data processing console applications, all utilizing the .Net stack.</h3>
+					<h3 class="carouselText" id="computerScienceText">During my time as a student at Texas Tech I learned the principles of object-oriented programming, as well as the advantages of certain algorithms and data structures in different scenarios. I have gone on to utilize this knowledge during my professional career while developing different applications. These applications have varied from websites and APIs to data processing console applications, all utilizing the .Net stack.</h3>
 				</div>
 
 				<button id=rightarrow onclick="nextSlide()">&#10095;</button>
