Updated text and resume formatting

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
 				<div class="carousel">
 					<img class="carouselPic" src="Images/Texas Tech.jpg" alt="Texas Tech">
-					<h3 class="carouselText" id="ttuText">In 2016 I moved to Lubbock and began my college degree at Texas Tech. I started out in Electrical Engineering, but early on discovered my interest in software development. I changed my major my Sophomore year and never looked back. I graduated in 2021 with my Bachelor of Science.</h3>
+					<h3 class="carouselText" id="ttuText">In 2016 I moved to Lubbock and began my college degree at Texas Tech. I started out in Electrical Engineering, but early on discovered my interest in software development. I changed my major my Sophomore year and never looked back. I graduated in 2021 with my Bachelor of Science in Computer Science.</h3>
 				</div>
 
 				<div class="carousel hidden">
 					<img class="carouselPic" src="Images/Code on Screen.jpg" alt="ADS">
-					<h3 class="carouselText" id="adsText">During my Senior year at Texas Tech, I was fortunate to have the opportunity to develop software for Texas Tech's Application Development and Support department as a student assistant. When I graduated that May I accepted an offer from Texas Tech to continue programming as a Programmer Analyst III.</h3>
+					<h3 class="carouselText" id="adsText">During my Senior year at Texas Tech, I was fortunate to have the opportunity to develop software for Texas Tech's Application Development and Support department as a student assistant. When I graduated that May I accepted an offer from Texas Tech to continue developing full time.</h3>
 				</div>
 
 				<div class="carousel hidden">
